[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "missing-edge-randomizer"
version = "0.1.0"
description = "Robustness of graph metrics under missing edges"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Sanaz", email = "hasanzad@msu.edu"}
]
license = {text = "MIT"}
dependencies = [
  "numpy",
  "networkx",
]

[project.optional-dependencies]
advanced = [
  "python-igraph",
  "leidenalg",
  "infomap",
  "graph-tool"
]

[tool.setuptools.packages.find]
where = ["src"]